Fix error initial UI, add padding and flex-wrap to wrapper

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -232,7 +232,7 @@
 }
 
 .videoSection {
-  padding:  0 5% 5%;
+  padding: 2.5% 5% 10%;
 
   h2 {
     text-align: center;
@@ -241,7 +241,6 @@
 
   .videoWrapper {
     display: flex;
-    // flex-wrap: wrap-reverse;
     margin: 0 auto;
     align-items: flex-start;
     justify-content: center;
@@ -249,7 +248,15 @@
     max-width: 1100px;
 
     & > * {
-      flex: 1 1 50%;
+      flex: 0 0 50%;
+    }
+
+    @media (max-width: 768px) {
+      flex-wrap: wrap-reverse;
+
+      & > * {
+        flex: 0 0 100%;
+      }
     }
 
     p {
